{
    "version": 1,
    "name": "PlayerControls2",
    "maps": [
        {
            "name": "Gameplay2",
            "id": "db356a40-af7b-44ab-90f7-de125bed84ba",
            "actions": [
                {
                    "name": "Movimento",
                    "type": "Value",
                    "id": "661764aa-5e6e-4a88-872d-5c2c5ad88b9e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump2",
                    "type": "Button",
                    "id": "7d737999-5843-4818-b3a6-4f2936aae04e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "a2954246-1c55-4218-b133-18fe6dd9494f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b6ee28e3-e2d8-4d80-86d3-15b0e643167f",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2bb7af2d-f270-4a43-8a3d-135757ec0837",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e6835477-b241-4b06-9a57-81f6dc3301a6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}